# pi_zero_rover

./: README.md
commands/: control.sh  disable.sh  enable.sh  send_duty_cycle.sh  setup.sh
rover/: Cargo.toml  build_for_pi  scp_to_pizero
rover/src/: cli.yml  error.rs  main.rs  rover.rs
